--- a/HelloDoc/Views/Home/Business_Request.cshtml
+++ b/HelloDoc/Views/Home/Business_Request.cshtml
@@ -45,7 +45,7 @@
         
             <!-- -----------------back button-------------------------- -->
             <div class="bg-body-secondary" style="background-color:#E9ECEF">
-                <div class="d-flex justify-content-end back">
+                <div class="d-flex justify-content-end back ">
                     <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="16"
@@ -65,7 +65,7 @@
             <!-- -----------------form-------------------------- -->
 
             <div class="container-fluid bg-body-secondary" style="background-color:#E9ECEF">
-                <div class="container bg-white ps-3">
+                <div class="container bg-white ps-3 shadow-lg">
 
 
                     <h4 class="pt-3 mb-4">Business Information</h4>
