--- a/HelloDoc/Views/Home/Concierge_Request.cshtml
+++ b/HelloDoc/Views/Home/Concierge_Request.cshtml
@@ -40,7 +40,7 @@
             <!-- -----------------form-------------------------- -->
 
             <div class="container-fluid bg-body-secondary" style="background-color:#E9ECEF">
-                <div class="container bg-white ps-3">
+                <div class="container bg-white ps-3 shadow-lg">
 
 
                     <h4 class="pt-3 mb-4">Concierge Information</h4>
