--- a/HelloDoc/Views/Home/Patient_Request.cshtml
+++ b/HelloDoc/Views/Home/Patient_Request.cshtml
@@ -41,8 +41,8 @@
 
         <!-- -----------------form-------------------------- -->
 
-            <div class="container-fluid" style="background-color:#E9ECEF">
-            <div class="container bg-white ps-3">
+            <div class="container-fluid" style="background-color:#E9ECEF" >
+                <div class="container bg-white ps-3 shadow-lg">
                 <h4 class="pt-3 mb-4">Patient Information</h4>
 
                 <div class="row">
