--- a/HelloDoc/Views/Home/Business_Request.cshtml
+++ b/HelloDoc/Views/Home/Business_Request.cshtml
@@ -17,8 +17,8 @@
 <body>
 
     <!-- ------------------- -->
-    <div class="modal" tabindex="-1" id="modal">
-        <div class="modal-dialog">
+    <div class="modal " tabindex="-1" id="modal">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="text-center text-white rounded-circle mt-4 mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-exclamation-circle-fill bg-warning rounded-circle " viewBox="0 0 16 16">
@@ -271,8 +271,8 @@
             <!-- -----------------form-------------------------- -->
         </div>
     </div>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js" ></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Business_Request.js"></script>
 </body>
