--- a/HelloDoc/Views/Home/Index.cshtml
+++ b/HelloDoc/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                             Submit A request
                         </button>
                  </a>
-                  <a asp-action="Patient_login">
+                  <a asp-controller="Login" asp-action="Patient_login">
                         <button class="btn btn-primary text-center text-white fs-2 py-3 pt-1 btn-style opacity-5"
                                 type="button">
                             Registered Patient
