--- a/HelloDoc/Views/Login/Patient_login.cshtml
+++ b/HelloDoc/Views/Login/Patient_login.cshtml
@@ -48,7 +48,7 @@
 
                     <h1>Login to your account</h1>
 
-                    <form asp-controller="Home" asp-action="Patient_login" method="post">
+                    <form asp-controller="Login" asp-action="Patient_login" method="post">
                     <div class="inp">
                         <div class="form-floating d-flex  border rounded inps">
                             <input type="text"
