--- a/HelloDoc/Views/Home/Patient_submit_request.cshtml
+++ b/HelloDoc/Views/Home/Patient_submit_request.cshtml
@@ -38,13 +38,13 @@
                 </div>
 
                 <div class="d-grid gap-4 mx-auto mt-4">
-                    <a asp-action="patient_Request"
+                    <a asp-action="patient_Request" asp-controller="Request"
                        class="btn btn-1 text-start fs-4 pb-4 pt-1 btn-style"
                        type="button">
                         PATIENT
                     </a>
 
-                    <a asp-action="Family_Friend_Request"
+                    <a asp-action="Family_Friend_Request" asp-controller="Request"
                        class="btn btn-2 text-start fs-4 pb-4 btn-style"
                        type="button">
                         FAMILY/FRIEND
