--- a/HelloDoc/Views/Request/Family_Friend_Request.cshtml
+++ b/HelloDoc/Views/Request/Family_Friend_Request.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DAL.ViewModel.Other_Request
 @{
     ViewData["Title"] = "Family_Friend_Request";
 }
@@ -38,7 +38,7 @@
             </div>
 
             <!-- -----------------form-------------------------- -->
-
+            <form asp-action="Family_Friend_request" asp-controller="Request" method="post">
             <div class="container-fluid bg-body-secondary" style="background-color:#E9ECEF">
                 <div class="container bg-white ps-3 shadow-lg">
 
@@ -49,6 +49,7 @@
                         <div class="col col-12 col-sm-6">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                           asp-for="FirstNameOther"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -58,6 +59,7 @@
                         <div class="col col-12 col-sm-6 mb-3">
                             <div class="form-floating">
                                 <input type="text"
+                                           asp-for="LastNameOther"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -69,6 +71,7 @@
                         <div class="col col-12 col-sm-6">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                           asp-for="PhoneNumberother"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -78,6 +81,7 @@
                         <div class="col col-12 col-sm-6 mb-3">
                             <div class="form-floating">
                                 <input type="email"
+                                           asp-for="EmailOther"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -91,6 +95,7 @@
                             <div class="form-floating">
                                 <input type="text"
                                        class="form-control"
+                                           asp-for="Relation"
                                        id="floatingPassword"
                                        placeholder="Password" />
                                 <label for="floatingPassword">Relation With Patient</label>
@@ -115,6 +120,7 @@
                         <div class="col col-12 col-sm-6">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="FirstName_P"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -124,6 +130,7 @@
                         <div class="col col-12 col-sm-6 mb-3">
                             <div class="form-floating">
                                 <input type="text"
+                                    asp-for="LastName_P"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -135,6 +142,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating">
                                 <input type="date"
+                                    asp-for="BirthDate_P"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -149,6 +157,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="email"
+                                    asp-for="Email_P"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -158,6 +167,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="tel"
+                                           asp-for="PhoneNumber_P"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -172,6 +182,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="Street"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -181,6 +192,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="City"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -192,6 +204,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="State"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -201,6 +214,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="Zipcode"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -257,7 +271,7 @@
 
                     <div class="row mb-3 pb-3">
                         <div class="d-grid gap-2 d-flex justify-content-end mt-4">
-                            <button class="btn btn-info me-md-2 text-white" type="button">Submit</button>
+                            <button class="btn btn-info me-md-2 text-white" type="submit">Submit</button>
                             <button class="btn btn-outline-info" type="button">Cancle</button>
                         </div>
                     </div>
@@ -266,7 +280,7 @@
 
           
 
-
+            </form>
             <!-- -----------------form-------------------------- -->
         </div>
     </div>
