--- a/HelloDoc/Views/Home/Index.cshtml
+++ b/HelloDoc/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
             </div>
 
             <div class="doct-logo">
-                <img src="../images/doct-logo-2.png" alt="" />
+                <img src="~/images/doct-logo-2.png" alt="" />
             </div>
 
             <div class="right">
