--- a/HelloDoc/Views/Home/Patient_submit_request.cshtml
+++ b/HelloDoc/Views/Home/Patient_submit_request.cshtml
@@ -49,7 +49,7 @@
                        type="button">
                         FAMILY/FRIEND
                     </a>
-                    <a asp-action="Concierge_Request"
+                    <a asp-action="Concierge_Request" asp-controller="Request"
                        class="btn btn-3 text-start fs-4 pb-4 btn-style"
                        type="button">
                         CONCIERGE
