--- a/HelloDoc/Views/Login/Patient_login.cshtml
+++ b/HelloDoc/Views/Login/Patient_login.cshtml
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patient Login Page</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/Patient_login.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Patient_login.css" />
 </head>
 <body>
     <div class="container-fluid">
@@ -35,8 +35,8 @@
                 </button>
 
                 <!-- doct img -->
-                <div class="logo mt-5">
-                    <img src="../images/doct-logo.jpg" alt="" />
+                <div class="logo mt-5" >
+                    <img src="~/images/doct-logo-2.png" alt="" id="img-logo" />
                 </div>
 
                 <!-- login form -->
