--- a/HelloDoc/wwwroot/css/Patient_login.css
+++ b/HelloDoc/wwwroot/css/Patient_login.css
@@ -18,9 +18,12 @@ h1 {
     margin-right: auto;
 }
 
-.logo {
-    margin-top: 0;
+
+img#img-logo {
+    height: 3rem;
 }
+
+  
 /* ---------------------------- */
 
 .btn {
