--- a/HelloDoc/Views/Home/Patient_submit_request.cshtml
+++ b/HelloDoc/Views/Home/Patient_submit_request.cshtml
@@ -54,7 +54,7 @@
                        type="button">
                         CONCIERGE
                     </a>
-                    <a  asp-action="Business_Request"
+                    <a asp-action="Business_Request" asp-controller="Request"
                        class="btn btn-4 text-start fs-4 pb-4 btn-style"
                        type="button">
                         BUSINESS PARTNER
