--- a/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
+++ b/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
@@ -18,7 +18,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col col-lg-6 col-sm-12 main-img">
+        <div class="col col-lg-6 col-sm-12 main-img opacity-50">
           <img src="../images/11116016_415.jpg" alt="" class="img-fluid" />
         </div>
         <div class="col col-lg-6 col-sm-12 text-center right-side">
@@ -40,7 +40,7 @@
           </div>
           <!-- doct img -->
           <div class="logo mt-5">
-            <img src="../images/doct-logo.jpg" alt="" />
+            <img src="~/images/doct-logo-2.png" alt=""   style="height:10rem"/>
           </div>
 
           <!-- login form -->
