--- a/HelloDoc/Views/Request/Business_Request.cshtml
+++ b/HelloDoc/Views/Request/Business_Request.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DAL.ViewModel.Other_Request;
 @{
     ViewData["Title"] = "Business_Request";
 }
@@ -63,7 +63,7 @@
             </div>
 
             <!-- -----------------form-------------------------- -->
-
+            <form asp-action="Business_Request" asp-controller="Request" method="post">
             <div class="container-fluid bg-body-secondary" style="background-color:#E9ECEF">
                 <div class="container bg-white ps-3 shadow-lg">
 
@@ -74,6 +74,7 @@
                         <div class="col col-12 col-sm-6">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                          asp-for="FirstNameOther"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -83,6 +84,7 @@
                         <div class="col col-12 col-sm-6 mb-3">
                             <div class="form-floating">
                                 <input type="text"
+                                       asp-for="LastNameOther"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -94,6 +96,7 @@
                         <div class="col col-12 col-sm-6">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="PhoneNumberother"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -103,6 +106,7 @@
                         <div class="col col-12 col-sm-6 mb-3">
                             <div class="form-floating">
                                 <input type="email"
+                                    asp-for="EmailOther"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -116,6 +120,7 @@
                             <div class="form-floating">
                                 <input type="text"
                                        class="form-control"
+                                       asp-for="BusinessName"
                                        id="floatingPassword"
                                        placeholder="Password" />
                                 <label for="floatingPassword">Business/Property Name</label>
@@ -125,6 +130,7 @@
                             <div class="form-floating">
                                 <input type="text"
                                        class="form-control"
+                                
                                        id="floatingPassword"
                                        placeholder="Password" />
                                 <label for="floatingPassword">Case No(optional)</label>
@@ -151,6 +157,7 @@
                                 <input type="text"
                                        class="form-control"
                                        id="floatingInput"
+                                       asp-for="FirstName_P"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">First Name</label>
                             </div>
@@ -160,6 +167,7 @@
                                 <input type="text"
                                        class="form-control"
                                        id="floatingPassword"
+                                       asp-for="LastName_P"
                                        placeholder="Password" />
                                 <label for="floatingPassword">Last Name</label>
                             </div>
@@ -169,6 +177,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating">
                                 <input type="date"
+                                    asp-for="BirthDate_P"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -183,6 +192,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="email"
+                                    asp-for="Email_P"
                                        class="form-control"
                                        id="floatingInput"
                                        placeholder="name@example.com" />
@@ -194,6 +204,7 @@
                                 <input type="tel"
                                        class="form-control"
                                        id="floatingInput"
+                                       asp-for="PhoneNumber_P"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">Mobile No</label>
                             </div>
@@ -206,6 +217,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="Street"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -215,6 +227,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="City"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -226,6 +239,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="State"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -235,6 +249,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
+                                    asp-for="Zipcode"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -259,14 +274,14 @@
                     <!-- ------------------------ -->
                     <div class="row mb-3 pb-3">
                         <div class="d-grid gap-2 d-flex justify-content-end mt-4">
-                            <button class="btn btn-info me-md-2 text-white" type="button">Submit</button>
-                            <button class="btn btn-outline-info" type="button">Cancle</button>
+                            <button class="btn btn-info me-md-2 text-white" type="submit">Submit</button>
+                                <button class="btn btn-outline-info" type="submit">Cancle</button>
                         </div>
                     </div>
                 </div>
             </div>
 
-
+            </form>
 
             <!-- -----------------form-------------------------- -->
         </div>
