--- a/HelloDoc/Views/Login/Patient_login.cshtml
+++ b/HelloDoc/Views/Login/Patient_login.cshtml
@@ -1,4 +1,5 @@
-﻿@model DAL.DataModels.AspNetUser;
+﻿
+@model DAL.ViewModel.Patient_login;
 @{
     ViewData["Title"] = "Patient_login";
     Layout = null;
@@ -18,7 +19,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col col-lg-6 col-sm-12 main-img">
+            <div class="col col-lg-6 col-sm-12 main-img opacity-50">
                 <img src="../images/11116016_415.jpg" alt="" class="img-fluid" />
             </div>
 
@@ -36,15 +37,19 @@
 
                 <!-- doct img -->
                 <div class="logo mt-5" >
-                    <img src="~/images/doct-logo-2.png" alt="" id="img-logo" />
+                    <img src="~/images/doct-logo-2.png" alt="" id="img-logo" style="height:10rem" />
                 </div>
 
                 <!-- login form -->
+
+
+                @* ---------------Back Button------------------- *@
                 <div>
-                    <a asp-action="index" class="text-info fs-5 mt-4 back">
+                    <a asp-action="index" asp-controller="Home" class="text-info fs-5 mt-4 back">
                         <span class="fs-4"><</span>
                         <span> Back</span>
                     </a>
+                @* ---------------Back Button------------------- *@
 
                     <h1>Login to your account</h1>
 
