--- a/HelloDoc/Views/Request/Patient_Request.cshtml
+++ b/HelloDoc/Views/Request/Patient_Request.cshtml
@@ -67,6 +67,7 @@
                                            id="floatingInput"
                                            placeholder="name@example.com" />
                                     <label for="floatingInput">First Name</label>
+                                <span asp-validation-for="FirstName" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                             <div class="col col-12 col-sm-6 mb-3">
@@ -77,6 +78,7 @@
                                            id="floatingPassword"
                                            placeholder="Password" />
                                     <label for="floatingPassword">Last Name</label>
+                                    <span asp-validation-for="LastName" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                         </div>
@@ -105,6 +107,7 @@
                     
                                            placeholder="name@example.com" />
                                     <label for="floatingInput">Email</label>
+                                    <span asp-validation-for="Email" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                             <div class="col col-sm-6 col-12">
@@ -128,6 +131,7 @@
                                            id="floatingInput"
                                            placeholder="name@example.com" />
                                     <label for="floatingInput">Password</label>
+                                    <span asp-validation-for="PasswordHash" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                             <div class="col col-sm-6 col-12">
@@ -137,6 +141,7 @@
                                            class="form-control"
                                            id="floatingInput"
                                            placeholder="name@example.com" />
+                                    <span asp-validation-for="Confirmpassword" class="text-danger mb-2"></span>
                                     <label for="floatingInput">Confirm Password</label>
                                 </div>
                             </div>
