--- a/HelloDoc/Views/Shared/_Layout-1.cshtml
+++ b/HelloDoc/Views/Shared/_Layout-1.cshtml
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
                         <img src="../images/doct-logo-2.png" alt="" style="height:5rem"/>
                     </div>
                     <div class=" float-end ">
-                        <span class="fw-bold me-2"> Welcome.........</span>
+                        <span class="fw-bold me-2"> Welcome:@ViewBag.username</span>
                         <button type="submit" class="btn border-info bg-white fw-2 text-info me-2 border border-2"
                         style="height:3rem">logout</button>
                         <button class="dark-button border border-2 border-info bg-white my-3 mx-2">
